Changed Color of Heading

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
+<style>
+h1{ 
+color: rgb(3,54,399);
+}
+</style>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
