--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@ h1{
 color: rgb(3,54,399);
 }
 </style>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Welcome to (insert website name)!</h1>
+<p>This web application will help diagnose you if you believe that you have a common illness or sickness. You will answer a
+series of questions and at the end, you will be provided some information and steps to treat your illness. Enjoy! </p>
 </body>
 </html>
+
+<a href="page2.html">Let's Get To Diagnosing!</a> 
