--- a/page5.html
+++ b/page5.html
@@ -8,5 +8,10 @@ color: rgb(3,54,399);
 </style>
 <h1>Let's start diagnosing!</h1>
 
+<p> Does your mouth feel tightly closed (lockjaw)?
+</p>
 
-<a href="page3.html">CLICK HERE TO START ANSWERING QUESTIONS. </a> 
+
+<a href="pageTetanus.html"> Yes </a> 
+
+<a href="page7.html"> No </a>
